--- a/index.html
+++ b/index.html
@@ -89,14 +89,13 @@ $(document).ready(function(){
 
 $(document).on('pagecreate', '#pagetwo',  function(){		
   	// $("#mdd").attr("src", "http://www.montededios.us/");
-  	$("#contenedor").load("http://montededios.us");
+  	//$("#contenedor").load("http://montededios.us");
 	 var screen = $.mobile.getScreenHeight();
      var header = $(".ui-header").hasClass("ui-header-fixed") ? $(".ui-header").outerHeight()  - 1 : $(".ui-header").outerHeight();
      var footer = $(".ui-footer").hasClass("ui-footer-fixed") ? $(".ui-footer").outerHeight() - 1 : $(".ui-footer").outerHeight();
      var contentCurrent = $(".ui-content").outerHeight() - $(".ui-content").height();
      var content = screen - header - contentCurrent;
      $(".ui-content").height(content);
-     $('#mdd').height(content-32);
 });
 
 $(document).on('pagecreate', '#pagethree', function(){
@@ -204,17 +203,6 @@ $(document).on('pagecreate', '#pagethree', function(){
 			<p><a href="#" data-role="button" data-icon="plus">Register a new account</a></p>
 			<p><a href="#" data-role="button" data-icon="alert">I forgot my password</a></p>
 		</div>
-		<script>
-		/*function abrirFacebook(){
-			if ("standalone" in navigator && navigator.standalone) {
-				//aqui funciona pero me manda directo...
- 				var permissionUrl = "https://m.facebook.com/dialog/oauth?client_id=293143157514503&response_type=code&redirect_uri=" + window.location + "&scope=public_profile,email";
- 				$('#pagethree_content').load(permissionUrl);
- 				$( ":mobile-pagecontainer" ).pagecontainer( "load", "confirm.html", { role: "dialog" } );
-				//window.location = permissionUrl;
-			}
-		}*/
-		</script>
 	</div>
 </div>
 
