--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
   
   <script type="text/javascript">
 //<![CDATA[
+
+function onDeviceReady() {
+    if (parseFloat(window.device.version) >= 7.0) {
+          document.body.style.marginTop = "20px";
+    }
+}
+  
+document.addEventListener('deviceready', onDeviceReady, false);
+
+
+
 $(document).ready(function(){
 	
 	$.event.special.tap = {
