--- a/index.html
+++ b/index.html
@@ -213,8 +213,6 @@ $(document).ready(function(){
 	
 	$('#pageone').css('left','0');
 	$('#pageone').css('display','block');
-	
-	document.addEventListener('deviceready', onDeviceReady, false);
 
 	
 });
@@ -250,12 +248,17 @@ function validateMessage(){
 	}else{$('#yourmessage').css('border-color','#f0f0f0'); return true;}
 }
 
+document.addEventListener('deviceready', onDeviceReady, false);
+
 function onDeviceReady() {
+	alert("ready");
     if (parseFloat(window.device.version) >= 7.0) {
+		alert("7");
           document.getElementById("header").style.paddingTop = "20px";
     }
 }
 
+//document.addEventListener('DOMContentLoaded', onDeviceReady, false);
 
 
 //]]>
