--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@ function validateMessage(){
 document.addEventListener('deviceready', onDeviceReady, false);
 
 function onDeviceReady() {
+	alert("hola");
 	alert(device.version);
     if (parseFloat(device.version) >= 7.0) {
-		alert("7");
           document.getElementById("header").style.paddingTop = "20px";
     }
 }
