--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ $(document).ready(function(){
 	$('#pageone').css('left','0');
 	$('#pageone').css('display','block');
 
+	document.addEventListener('deviceready', onDeviceReady, false);
 	
 });
 
@@ -248,7 +249,8 @@ function validateMessage(){
 	}else{$('#yourmessage').css('border-color','#f0f0f0'); return true;}
 }
 
-document.addEventListener('deviceready', onDeviceReady, false);
+//document.addEventListener('deviceready', onDeviceReady, false);
+//document.addEventListener('DOMContentLoaded', onDeviceReady, false);
 
 function onDeviceReady() {
 	alert("hola");
@@ -258,7 +260,7 @@ function onDeviceReady() {
     }
 }
 
-//document.addEventListener('DOMContentLoaded', onDeviceReady, false);
+
 
 
 //]]>
