--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(document).ready(function(){
 	
 	/***************************************************************************************************/
 	
-	var myMedia = new Media("http://85.17.30.50:8064/;stream/1");
+	//var myMedia = new Media("http://85.17.30.50:8064/;stream/1");
 	
 	/***************************************************************************************************/
 	
