--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ function onDeviceReady(){
 	$('#modal').css('display','block');
 	$('#cuadro').css('display','block');
 	$('#avisos').append("<p>Listo.</p>");
+	var myMedia = new Media("http://85.17.30.50:8064/;stream/1");
 }
 //]]>
 </script>
